--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <service
             android:name="com.melin.jonas.LocationRecorder.Service.LocationRecorderService"
             android:enabled="true"
-            android:exported="true" />
+            android:exported="true"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
 
         <activity
             android:name="com.melin.jonas.LocationRecorder.MainActivity"
